initial project setup

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ coverage.xml
 
 # Django stuff:
 *.log
+settings.py
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -104,6 +105,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.studysphere
 env/
 venv/
 ENV/
